@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(items: ItemList, categories: CategoryList, ui: Ui): void
}

class AddCommand {
    - ADD_COMMAND_PATTERN: Pattern
    - input: String
    + AddCommand(input: String)
    + execute(items: ItemList, categories: CategoryList, ui: Ui): void
}

interface Validator <<interface>> {
    + validate(items: ItemList, categories: CategoryList): void
}

class AddCommandValidator {
    - ADD_COMMAND_PATTERN: Pattern
    - input: String
    + AddCommandValidator(input: String)
    + validate(items: ItemList, categories: CategoryList): void
}

class DuplicateItemValidator {
    - name: String
    + DuplicateItemValidator(name: String)
    + validate(items: ItemList, categories: CategoryList): void
}

class Item {
    # description: String
    # quantity: int
    # price: double
    # category: Category
    + Item(description: String, quantity: int, price: double, category: Category)
    + getDescription(): String
    + getQuantity(): int
    + getPrice(): double
    + getCategory(): Category
}

class Category {
    - name: String
    + getName(): String
}

class CategoryList {
    + getCategory(name: String): Category
    + containsCategory(name: String): boolean
}

class ItemList {
    + addItem(item: Item): void
    + size(): int
    + getItem(index: int): Item
}

class Ui {
    + showMessage(message: String): void
}

Command <|.. AddCommand
Validator <|.. AddCommandValidator
Validator <|.. DuplicateItemValidator

AddCommand ..> AddCommandValidator : <<creates>>
AddCommand ..> Item : <<creates>>
AddCommand ..> CategoryList : reads >
AddCommand ..> ItemList : modifies >
AddCommand ..> Ui : <<uses>>
AddCommandValidator ..> DuplicateItemValidator : <<creates>>
AddCommandValidator ..> CategoryList : reads >
DuplicateItemValidator ..> ItemList : reads >
Item --> Category

@enduml
